# hhs-embeddedproject-q2

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfigDisplay
main/: CMakeLists.txt  display.c  idf_component.yml  local_alarm.c  main.c  main_2.c  mqtt_topics.h  particle.c  particle_2.c  sensitive.h  server_root_cert.h  temp_hum.c  wifi_mqtt.c
